# MarioMultiverseAdventures

./: .gitignore  CMakeLists.txt  README.md  SetupProject.md  vcpkg.json
include/: AudioManager.h  Character.h  Coin.h  CoverPageOpenGL.h  DatabaseHandler.h  FlappyBird.h  GlobalVariables.h  Highscore.h  InstructionPage.h  Obstacle.h  River.h  RiverGame.h  StageComponents.h  main.h  menu.h
scripts/: generate_linux.sh  generate_windows.bat
src/: AudioManager.cpp  Character.cpp  Coin.cpp  DatabaseHandler.cpp  main.cpp  main.h
